--- a/JEKScrollableSectionCollectionViewLayout.xcodeproj/xcshareddata/xcschemes/Example Project.xcscheme
+++ b/JEKScrollableSectionCollectionViewLayout.xcodeproj/xcshareddata/xcschemes/Example Project.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0900"
+   LastUpgradeVersion = "0940"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "5D0344B01F543D8E0050DE76"
-               BuildableName = "libJEKScrollableSectionCollectionView.a"
-               BlueprintName = "JEKScrollableSectionCollectionView"
-               ReferencedContainer = "container:JEKScrollableSectionCollectionView.xcodeproj">
+               BlueprintIdentifier = "5D8FEDCD1F463D0300857A7E"
+               BuildableName = "Example Project.app"
+               BlueprintName = "Example Project"
+               ReferencedContainer = "container:JEKScrollableSectionCollectionViewLayout.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -26,10 +26,18 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      language = ""
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
       </Testables>
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "5D8FEDCD1F463D0300857A7E"
+            BuildableName = "Example Project.app"
+            BlueprintName = "Example Project"
+            ReferencedContainer = "container:JEKScrollableSectionCollectionViewLayout.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </TestAction>
@@ -37,22 +45,22 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      language = ""
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <MacroExpansion>
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "5D0344B01F543D8E0050DE76"
-            BuildableName = "libJEKScrollableSectionCollectionView.a"
-            BlueprintName = "JEKScrollableSectionCollectionView"
-            ReferencedContainer = "container:JEKScrollableSectionCollectionView.xcodeproj">
+            BlueprintIdentifier = "5D8FEDCD1F463D0300857A7E"
+            BuildableName = "Example Project.app"
+            BlueprintName = "Example Project"
+            ReferencedContainer = "container:JEKScrollableSectionCollectionViewLayout.xcodeproj">
          </BuildableReference>
-      </MacroExpansion>
+      </BuildableProductRunnable>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
@@ -62,15 +70,16 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <MacroExpansion>
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "5D0344B01F543D8E0050DE76"
-            BuildableName = "libJEKScrollableSectionCollectionView.a"
-            BlueprintName = "JEKScrollableSectionCollectionView"
-            ReferencedContainer = "container:JEKScrollableSectionCollectionView.xcodeproj">
+            BlueprintIdentifier = "5D8FEDCD1F463D0300857A7E"
+            BuildableName = "Example Project.app"
+            BlueprintName = "Example Project"
+            ReferencedContainer = "container:JEKScrollableSectionCollectionViewLayout.xcodeproj">
          </BuildableReference>
-      </MacroExpansion>
+      </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
