--- a/JEKScrollableSectionCollectionViewLayout.xcodeproj/xcshareddata/xcschemes/Example Project.xcscheme
+++ b/JEKScrollableSectionCollectionViewLayout.xcodeproj/xcshareddata/xcschemes/Example Project.xcscheme
@@ -28,6 +28,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "5DB9F3B821125AAA00FB286C"
+               BuildableName = "Tests.xctest"
+               BlueprintName = "Tests"
+               ReferencedContainer = "container:JEKScrollableSectionCollectionViewLayout.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
