Use a collection view during testing
Instead of overriding dataSources/delegate of the layout

--- a/JEKScrollableSectionCollectionViewLayout.xcodeproj/xcshareddata/xcschemes/Example Project.xcscheme
+++ b/JEKScrollableSectionCollectionViewLayout.xcodeproj/xcshareddata/xcschemes/Example Project.xcscheme
@@ -26,18 +26,10 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      codeCoverageEnabled = "YES"
+      onlyGenerateCoverageForSpecifiedTargets = "YES"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "5DB9F3B821125AAA00FB286C"
-               BuildableName = "Tests.xctest"
-               BlueprintName = "Tests"
-               ReferencedContainer = "container:JEKScrollableSectionCollectionViewLayout.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
